--- a/ParseStarterProject/src/main/AndroidManifest.xml
+++ b/ParseStarterProject/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.parse.starter" >
 
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="19" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -19,8 +23,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <!--android:supportsRtl="true"-->
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="@string/parse_app_id" />
@@ -30,16 +34,21 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" >
+        <activity android:name=".LoginActivity"
+                  android:screenOrientation="portrait">
+            <!--android:label="@string/title_activity_login"-->
         </activity>
-        <activity android:name=".SignUpActivity" >
+        <activity android:name=".SignUpActivity"
+                  android:screenOrientation="portrait"  >
+            <!--android:label="@string/title_activity_sign_up"-->
         </activity>
     </application>
 
